# rust-platformer

./: Cargo.toml
assets/: map.txt  metroid.ldtk  metroid2.ldtk  test.ldtk
assets/metroid/: level_0.ldtkl
assets/test/simplified/level_0/: data.json  intgrid.csv
src/: ascii.rs  debug.rs  main.rs  player.rs  tilemap.rs  tiles.rs
src/game/: ascii.rs  inspector.rs  mod.rs  player.rs  tilemap.rs  tiles.rs
src/game/ldtk/: entities.rs  int_grid.rs  mod.rs  tiles.rs
src/ldtk/: entities.rs  helpers.rs  int_grid.rs  mod.rs  tiles.rs
src/menu/: mod.rs
