[package]
name = "platformer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.7"
bevy-inspector-egui = "0.10"
ldtk_rust = "0.5.3"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3